Jump to timeslot, with one maddening iOS bug....

--- a/public/stylesheets/sass/schedule-mobile.sass
+++ b/public/stylesheets/sass/schedule-mobile.sass
@@ -1,5 +1,8 @@
 #schedule-body
   font-size: 2.5em !important
+  .nav-top
+    font-size: 42px !important
+    display: hidden
   .schedule-header
     .controls
       margin: 1.6em 0
@@ -11,6 +14,8 @@
     .timeslot
       h2
         font-size: 1.4em !important
+        padding-top: 0
+        padding-bottom: 0.1em
       .sessions
         .column
           width: 100% !important
