--- a/public/stylesheets/sass/schedule-print.sass
+++ b/public/stylesheets/sass/schedule-print.sass
@@ -1,5 +1,8 @@
 #schedule-body
-  font-size: 0.5em !important
+  font-size: 0.6em !important
+  .nav-top
+    display: none
   .schedule-header
+    padding-top: 1em
     .hint, .controls
       display: none
